--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/multer": "^1.4.11",
     "argon2": "^0.31.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "mongodb": "^6.3.0",
     "mongoose": "^6.2.2",
     "multer": "^1.4.5-lts.1",
