--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/mongoose": "^10.0.2",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.3",
+    "@nestjs/websockets": "^10.3.3",
     "@types/multer": "^1.4.11",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
